--- a/OmneFictio.Web/wwwroot/css/publish.css
+++ b/OmneFictio.Web/wwwroot/css/publish.css
@@ -59,22 +59,31 @@
   padding-left: 6px;
   margin-bottom: 8px;
 }
-.writing_form .wf-post_primary .wf-title {
+.writing_form .wf-post_primary .wf-title, .writing_form .wf-post_primary .wf-description {
   padding: 6px 10px;
   margin-bottom: 12px;
-}
-.writing_form .wf-post_primary .wf-description {
-  padding: 6px 10px;
-  width: 100%;
-  height: 200px;
-  margin-bottom: 20px;
-}
-.writing_form .wf-post_primary .wf-title, .writing_form .wf-post_primary .wf-description {
   border-radius: 4px;
   background-color: var(--publish-input-color);
   color: var(--text-color1);
   border: none;
   outline: none;
+}
+.writing_form .wf-post_primary .wf-description {
+  height: 200px;
+}
+.writing_form .wf-post_primary .coverupload_wrap {
+  display: flex;
+  margin-bottom: 20px;
+}
+.writing_form .wf-post_primary .coverupload_wrap input {
+  flex-grow: 1;
+  padding: 4px 4px;
+  max-width: 460px;
+  background-color: var(--publish-input-color);
+  color: var(--text-color1);
+  border: none;
+  outline: none;
+  border-radius: 4px;
 }
 .writing_form .wf-post_details {
   display: flex;
