--- a/OmneFictio.Web/wwwroot/css/publish.scss
+++ b/OmneFictio.Web/wwwroot/css/publish.scss
@@ -58,22 +58,33 @@
             padding-left: 6px;
             margin-bottom: 8px;
         }
-        .wf-title{
+        .wf-title, .wf-description{
             padding: 6px 10px;
             margin-bottom: 12px;
-        }
-        .wf-description{
-            padding: 6px 10px;
-            width: 100%;
-            height: 200px;
-            margin-bottom: 20px;
-        }
-        .wf-title, .wf-description{
             border-radius: 4px;
             background-color: var(--publish-input-color);
             color: var(--text-color1);
             border: none;
             outline: none;
+        }
+        .wf-title{
+        }
+        .wf-description{
+            height: 200px;
+        }
+        .coverupload_wrap{
+            display: flex;
+            margin-bottom: 20px;
+            input{
+                flex-grow: 1;
+                padding: 4px 4px;
+                max-width: 460px;
+                background-color: var(--publish-input-color);
+                color: var(--text-color1);
+                border: none;
+                outline: none;
+                border-radius: 4px;
+            }
         }
     }
     .wf-post_details{
