changed multiple allows to all allowAdultContent

--- a/OmneFictio.Web/Views/Home/Publish.cshtml
+++ b/OmneFictio.Web/Views/Home/Publish.cshtml
@@ -128,7 +128,7 @@
                 <div class="wf-ratedas">
                     <span>Rated as:</span>
                     <select name="RatedAsId">
-                        <option value="0">Rate</option>
+                        <option value="0">Rated as</option>
                         <option value="1">E - Everyone</option>
                         <option value="2">T - 13+</option>
                         <option value="3">M - 15+</option>
