--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -155,10 +155,17 @@
                 <option value="3">Dropped</option>
                 <option value="4">Finished</option>
             </select>
-            <label class="f-allow18">
+            <!--<label class="f-allow18">
                 <span>+18</span>
                 <input type="checkbox" name="allow18" id="allow18checkbox" value="1">
-            </label>
+            </label>-->
+            <select name="ratedas">
+                <option value="0">Rated as</option>
+                <option value="1">E - Everyone</option>
+                <option value="2">T - 13+</option>
+                <option value="3">M - 15+</option>
+                <option value="4">A - 18+</option>
+            </select>
             <select name="lastupdate">
                 <option value="0">Last update</option>
                 <option value="1">&#60; 1 day</option>
