--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -376,6 +376,7 @@ main{
                 cursor: pointer;
             }
             .f-allow18{
+                //disabled it temporarily, i can use it later
                 display: flex;
                 flex-direction: row;
                 > span{
