--- a/OmneFictio.Web/Views/Home/Register.cshtml
+++ b/OmneFictio.Web/Views/Home/Register.cshtml
@@ -30,8 +30,7 @@
             <span>Extras</span>
         </div>
         <div class="re-primary">
-            <label><span>Allow sexual content</span><input type="checkbox" name="AllowSexual" value="true" checked></label>
-            <label><span>Allow violent content</span><input type="checkbox" name="AllowViolence" value="true" checked></label>
+            <label><span>Allow adult content (15+)</span><input type="checkbox" name="AllowAdultContent" value="true" checked></label>
             <span>Preferred language:</span>
             <select name="PrefLanguageId">
                 <option value="0">Language</option>
