new image folder / column design 1

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -27,19 +27,19 @@
     <div class="linkgroup_cont readingtime">
         <span>Reading Time</span>
         <div class="linkgroup">
-            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="story">
+            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="Story">
                 <i class="bi bi-book-fill"></i>
                 <span>Story</span>
             </a>
-            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="scenario">
+            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="Scenario">
                 <i class="bi bi-book-half"></i>
                 <span>Scenario</span>
             </a>
-            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="fanfiction">
+            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="Fanfiction">
                 <i class="bi bi-book"></i>
                 <span>Fanfiction</span>
             </a>
-            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="plot">
+            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="Plot">
                 <i class="bi bi-journal-text"></i>
                 <span>Plot</span>
             </a>
