--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -1,4 +1,5 @@
 .post {
+  width: 100%;
   margin-bottom: 12px;
   background-color: var(--background-color2);
   box-shadow: 0px 2px 4px -2px rgba(0, 0, 0, 0.25);
