--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -1,5 +1,6 @@
 
 .post{
+    width: 100%;
     margin-bottom: 12px;
     background-color: var(--background-color2);
     -webkit-box-shadow: 0px 2px 4px -2px rgb(0 0 0 / 25%);
