read column design final

--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -319,7 +319,7 @@
             Filter
         </span>
     </div>
-
+    <div class="post-list">
     @{
         if(Model.posts.Count > 0){
             foreach(PostRead1 post in Model.posts){
@@ -529,6 +529,7 @@
             <div class="read-nopost"><span>We have failed to provide you service :(</span></div>
         }
     }
+    </div>
     
     <!--
     <div class="post">
