--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -24,10 +24,8 @@ main{
 
 .posts-cont{
     display: flex;
-    //flex-direction: column;
+    flex-direction: column;
     flex-grow: 1;
-    flex-wrap: wrap;
-    justify-content: space-between;
     .post-options{
         display: flex;
         flex-direction: row;
@@ -65,7 +63,15 @@ main{
             margin-right: 36px;
         }
     }
-    
+    .post-list{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        .post{
+            display: inline-block;
+        }
+    }
 }
 
 
@@ -520,11 +526,15 @@ main{
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-    .post {
-        width: 49% !important;
-    }
     .nav-cont{
         width: 240px;
+    }
+    .post-list .post{
+        width: 49% !important;
+        > * {
+            height: 100%;
+            justify-content: space-between;
+        }
     }
 }
 
