get individual post 1

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home";
     @section Stylesheets {
         <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
-        <link rel="stylesheet" href="~/css/post.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/postitem.css" asp-append-version="true" />
     }
     @section Scripts {
         <script src="~/js/index.js" asp-append-version="true" ></script>
