--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -66,16 +66,16 @@ main {
   display: flex;
   flex-direction: column;
 }
-.posts-cont .post-list::before, .posts-cont .post-list::after {
+.posts-cont .pl-masonry::before, .posts-cont .pl-masonry::after {
   content: "";
   flex-basis: 100%;
   width: 0px;
   order: 2;
 }
-.posts-cont .post-list .post:nth-child(2n+1) {
+.posts-cont .pl-masonry .post:nth-child(2n+1) {
   order: 1;
 }
-.posts-cont .post-list .post:nth-child(2n) {
+.posts-cont .pl-masonry .post:nth-child(2n) {
   order: 2;
 }
 
@@ -517,15 +517,18 @@ main {
   .nav-cont {
     width: 240px;
   }
-  .post-list {
+  .pl-masonry {
     flex-flow: column wrap;
   }
-  .post-list .post {
-    width: 49% !important;
+  .pl-masonry .post {
+    width: 49.5% !important;
   }
-  .post-list .post > * {
+  .pl-masonry .post > * {
     height: 100%;
     justify-content: space-between;
+  }
+  .pl-masonry .post:nth-child(2n+1) {
+    margin-right: 1%;
   }
 }
 @media (max-width: 340px) {
