--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -67,6 +67,8 @@ main{
         width: 100%;
         display: flex;
         flex-direction: column;
+    }
+    .pl-masonry{
         &::before, &::after {
             content: "";
             flex-basis: 100%;
@@ -537,14 +539,17 @@ main{
     .nav-cont{
         width: 240px;
     }
-    .post-list{
+    .pl-masonry{
         flex-flow: column wrap;
         .post{
-            width: 49% !important;
+            width: 49.5% !important;
             > * {
                 height: 100%;
                 justify-content: space-between;
             }
+        }
+        .post:nth-child(2n+1) {
+            margin-right: 1%;
         }
     }
 }
