--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -116,13 +116,13 @@
                     After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
                 </div>
                 <div class="p-footer">
-                    <div class="pf-evaluation">
+                    <div class="p-evaluation">
                         <i class="bi bi-hand-thumbs-up p-likebtn"></i>
                         <span class="p-likes">5465</span>
                         <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
                         <span class="p-rate">7.4/10</span>
                     </div>
-                    <div class="pf-user">
+                    <div class="p-user">
                         <span class="p-username">MrBombastic</span>
                         <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
                     </div>
@@ -183,13 +183,13 @@
                     After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
                 </div>
                 <div class="p-footer">
-                    <div class="pf-evaluation">
+                    <div class="p-evaluation">
                         <i class="bi bi-hand-thumbs-up p-likebtn"></i>
                         <span class="p-likes">5465</span>
                         <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
                         <span class="p-rate">7.4/10</span>
                     </div>
-                    <div class="pf-user">
+                    <div class="p-user">
                         <span class="p-username">MrBombastic</span>
                         <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
                     </div>
@@ -248,13 +248,13 @@
                     After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
                 </div>
                 <div class="p-footer">
-                    <div class="pf-evaluation">
+                    <div class="p-evaluation">
                         <i class="bi bi-hand-thumbs-up p-likebtn"></i>
                         <span class="p-likes">5465</span>
                         <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
                         <span class="p-rate">7.4/10</span>
                     </div>
-                    <div class="pf-user">
+                    <div class="p-user">
                         <span class="p-username">MrBombastic</span>
                         <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
                     </div>
@@ -321,13 +321,13 @@
                     After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
                 </div>
                 <div class="p-footer">
-                    <div class="pf-evaluation">
+                    <div class="p-evaluation">
                         <i class="bi bi-hand-thumbs-up p-likebtn"></i>
                         <span class="p-likes">5465</span>
                         <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
                         <span class="p-rate">7.4/10</span>
                     </div>
-                    <div class="pf-user">
+                    <div class="p-user">
                         <span class="p-username">MrBombastic</span>
                         <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
                     </div>
@@ -387,13 +387,13 @@
                     After his father’s death, Odin was not going to be so peaceful. Old ways died as the new skyfather born.
                 </div>
                 <div class="p-footer">
-                    <div class="pf-evaluation">
+                    <div class="p-evaluation">
                         <i class="bi bi-hand-thumbs-up p-likebtn"></i>
                         <span class="p-likes">5465</span>
                         <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
                         <span class="p-rate">7.4/10</span>
                     </div>
-                    <div class="pf-user">
+                    <div class="p-user">
                         <span class="p-username">MrBombastic</span>
                         <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
                     </div>
