--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -9,3 +9,135 @@
 }
 @using OmneFictio.Web.Models
 <!--model PostViewmodel-->
+
+
+<div class="post-2">
+    <div class="post-card">
+        <div class="p-body">
+            <div class="p-cover">
+                <img src="/images/covers/71GFREhtqNL.jpg">
+            </div>
+            <div class="p-text">
+                <div class="p-title-cont">
+                    <span class="p-title">Odin the Omnipotent</span>
+                    <span class="p-date">12/09/2022</span>
+                </div>
+                <span class="p-description">Jones fell in love with the goddess Calypso. He agreed to guide the dead but Calypso was a bi*ch. When he returned from duty, she was not there.</span>
+            </div>
+        </div>
+        <div class="p-footer">
+            <div class="p-evaluation">
+                <i class="bi bi-hand-thumbs-up post-vote p-likebtn" data-action="like"></i>
+                <span class="p-likes">5432</span>
+                <i class="bi bi-hand-thumbs-down post-vote p-dislikebtn" data-action="dislike"></i>
+                <span class="p-rate">8/10</span>
+            </div>
+            <div class="p-user">
+                <span class="p-username">MrBombastic</span>
+                <img src="/images/users/user_no_photo_300x300.png">
+            </div>
+        </div>
+    </div>
+    
+
+    <div class="p-actions">
+        <button type="button" class="pd-saved">Save</button>
+        <button type="button">Share</button>
+        <button type="button">Report</button>
+    </div>
+    <span>More details ></span>
+    <div class="p-details d-block">
+        <div class="pd-items">
+            <span>Story</span>
+            <span>English</span>
+            <span>On-going</span>
+        </div>
+        <div class="pd-series">
+            <span>Harry Potter</span>
+            <span>Pirates</span>
+        </div>
+        <div class="pd-tags">
+            <span>Action</span>
+            <span>Comedy</span>
+            <span>Fantasy</span>
+            <span>Romance</span>
+            <span>Dram</span>
+        </div>
+    </div>
+</div>
+
+<div class="start_reading">
+    <a href="#">Start Reading</a>
+</div>
+
+<div class="chapter_selection">
+    <button>Chapters</button>
+    <a href="#">Open all</a>
+</div>
+
+<div class="rate_it">
+    <button>Rate again</button>
+    <span>8/10</span>
+</div>
+
+<div class="add_comment-cont">
+    <input type="text" placeholder="This is where we comment.">
+    <div class="ac-footer">
+        <div class="ac-user">
+            <img src="/images/users/user_no_photo_300x300.png">
+            <span class="ac-username">MrBombastic</span>
+        </div>
+        <a href="#">Send</a>
+    </div>
+</div>
+
+<div class="comments">
+    <div class="comment-cont">
+        <div class="comment">
+            <div class="c-header">
+                <div class="c-user">
+                    <img src="/images/users/user_no_photo_300x300.png">
+                    <span class="c-username">MrBombastic</span>
+                </div>
+                <div class="c-menu">
+                    <i class="bi bi-three-dots"></i>
+                </div>
+            </div>
+            <div class="c-text">
+                <span>This is a comment right here. This is a comment right here. This is a comment right here. This is a comment right here.</span>
+            </div>
+            <div class="c-footer">
+                <div class="c-evaluation">
+                    <i class="bi bi-hand-thumbs-up c-likebtn"></i>
+                    <span class="c-likes">5465</span>
+                    <i class="bi bi-hand-thumbs-down c-dislikebtn"></i>
+                    <a href="#">Reply</a>
+                </div>
+                <a href="go get the replies mf" class="get_replies-cont">
+                    <span>4 replies</span>
+                </a>
+            </div>
+        </div>
+        <div class="reply-cont">
+            <div class="reply">
+                <div class="r-text">
+                    <span>This is a reply right here. This is a reply right here. This is a reply right here.</span>
+                </div>
+                <div class="r-footer">
+                    <div class="r-evaluation">
+                        <i class="bi bi-hand-thumbs-up r-likebtn"></i>
+                        <span class="r-likes">5465</span>
+                        <i class="bi bi-hand-thumbs-down r-dislikebtn"></i>
+                        <a href="#">Reply</a>
+                    </div>
+                    <div class="r-user">
+                        <span class="r-username">MrBombastic</span>
+                        <img src="/images/users/user_no_photo_300x300.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</div>
