--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -332,7 +332,7 @@
                             <span>@post.postDescription</span>
                         </div>
                         <div class="p-footer">
-                            <div class="pf-evaluation">
+                            <div class="p-evaluation">
                                 @{
                                     int votedByUser = -2; // -2 means not logged in  (maybe temporary)
                                     if(userId != "-1"){
@@ -420,7 +420,7 @@
                                     }
                                 </span>
                             </div>
-                            <div class="pf-user">
+                            <div class="p-user">
                                 @if(post.account != null){
                                     <span class="p-username p-deleted_user">@post.account.username</span>
                                 }else{
@@ -526,20 +526,20 @@
                     <span class="p-date">27/07/022</span>
                 </div>
                 <div class="p-menu">
-                <i class="bi bi-caret-left p-menubtn"></i>
+                    <i class="bi bi-caret-left p-menubtn"></i>
                 </div>
             </div>
             <div class="p-body">
                 Jones fell in love with the goddess Calypso. He agreed to guide the dead but Calypso was a bi*ch. When he returned from duty, she was not there.
             </div>
             <div class="p-footer">
-                <div class="pf-evaluation">
+                <div class="p-evaluation">
                     <i class="bi bi-hand-thumbs-up p-likebtn"></i>
                     <span class="p-likes">5465</span>
                     <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
                     <span class="p-rate">7.4/10</span>
                 </div>
-                <div class="pf-user">
+                <div class="p-user">
                     <span class="p-username">MrBombastic</span>
                     <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
                 </div>
