--- a/OmneFictio.Web/wwwroot/css/postitem.css
+++ b/OmneFictio.Web/wwwroot/css/postitem.css
@@ -79,46 +79,45 @@
 .post-detail .p-footer {
   font-family: "Itim", cursive;
   display: flex;
-  flex-direction: row;
   flex-flow: wrap;
   padding: 0 10px 10px;
 }
-.post-detail .p-footer .pf-evaluation {
+.post-detail .p-footer .p-evaluation {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  flex-grow: 1;
   color: var(--text-color-hover1);
 }
-.post-detail .p-footer .pf-evaluation i {
+.post-detail .p-footer .p-evaluation i {
   font-size: 1.2rem;
   cursor: pointer;
   transition: color 0.2s ease;
 }
-.post-detail .p-footer .pf-evaluation i:hover {
+.post-detail .p-footer .p-evaluation i:hover {
   color: var(--text-color1);
 }
-.post-detail .p-footer .pf-evaluation .p-likebtn.active {
+.post-detail .p-footer .p-evaluation .p-likebtn.active {
   color: #1198ff;
 }
-.post-detail .p-footer .pf-evaluation .p-dislikebtn.active {
+.post-detail .p-footer .p-evaluation .p-dislikebtn.active {
   color: #bd1313;
 }
-.post-detail .p-footer .pf-evaluation .p-likes {
+.post-detail .p-footer .p-evaluation .p-likes {
   padding: 0 8px;
 }
-.post-detail .p-footer .pf-evaluation .p-rate {
+.post-detail .p-footer .p-evaluation .p-rate {
   margin-left: 20px;
 }
-.post-detail .p-footer .pf-user {
+.post-detail .p-footer .p-user {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   flex-shrink: 0;
+  margin-left: auto;
 }
-.post-detail .p-footer .pf-user .p-username {
+.post-detail .p-footer .p-user .p-username {
   font-size: 0.8rem;
   cursor: pointer;
   margin-left: 8px;
@@ -128,10 +127,10 @@
   overflow: hidden;
   max-width: 180px;
 }
-.post-detail .p-footer .pf-user .p-username:hover {
+.post-detail .p-footer .p-user .p-username:hover {
   text-decoration: underline;
 }
-.post-detail .p-footer .pf-user img {
+.post-detail .p-footer .p-user img {
   height: 1.7rem;
   width: 1.7rem;
   border-radius: 50%;
