--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -39,31 +39,32 @@
         </div>
     </div>
     
-
-    <div class="p-actions">
-        <button type="button" class="pd-saved">Save</button>
-        <button type="button">Share</button>
-        <button type="button">Report</button>
+    <div class="post-more">
+        <div class="p-actions">
+            <button type="button" class="pd-saved">Save</button>
+            <button type="button">Share</button>
+            <button type="button">Report</button>
+        </div>
+        <div class="p-details">
+            <div class="pd-items">
+                <span>Story</span>
+                <span>English</span>
+                <span>On-going</span>
+            </div>
+            <div class="pd-series">
+                <span>Harry Potter</span>
+                <span>Pirates</span>
+            </div>
+            <div class="pd-tags">
+                <span>Action</span>
+                <span>Comedy</span>
+                <span>Fantasy</span>
+                <span>Romance</span>
+                <span>Dram</span>
+            </div>
+        </div>
     </div>
-    <span>More details ></span>
-    <div class="p-details d-block">
-        <div class="pd-items">
-            <span>Story</span>
-            <span>English</span>
-            <span>On-going</span>
-        </div>
-        <div class="pd-series">
-            <span>Harry Potter</span>
-            <span>Pirates</span>
-        </div>
-        <div class="pd-tags">
-            <span>Action</span>
-            <span>Comedy</span>
-            <span>Fantasy</span>
-            <span>Romance</span>
-            <span>Dram</span>
-        </div>
-    </div>
+    
 </div>
 
 <div class="start_reading">
