--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -1,5 +1,6 @@
 .post-2 {
   width: 100%;
+  padding-top: 16px;
   margin: 0 0 12px;
   display: flex;
   flex-direction: column;
@@ -8,10 +9,10 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
-  padding: 16px 0;
+  padding: 0 8px;
 }
 .post-2 .post-card .p-body {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: row;
 }
@@ -19,7 +20,6 @@
   display: flex;
   align-items: center;
   flex-shrink: 0;
-  padding-left: 6px;
   padding-right: 12px;
   width: 20%;
   min-width: 90px;
@@ -27,6 +27,7 @@
 .post-2 .post-card .p-body .p-cover img {
   width: 100%;
   height: auto;
+  max-height: 370px;
   border-radius: 4px;
 }
 .post-2 .post-card .p-body .p-text {
@@ -59,7 +60,6 @@
   font-family: "Itim", cursive;
   display: flex;
   flex-flow: wrap;
-  padding: 0 10px 10px;
   width: 100%;
 }
 .post-2 .post-card .p-footer .p-evaluation {
@@ -116,6 +116,83 @@
   border-radius: 50%;
   cursor: pointer;
 }
+.post-2 .post-more {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+.post-2 .post-more .p-actions {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 6px 8px;
+  padding-bottom: 16px;
+}
+.post-2 .post-more .p-actions .pd-saved {
+  background-color: #4A8D5D !important;
+  color: #fff;
+}
+.post-2 .post-more .p-actions button {
+  color: var(--text-color1);
+  border-radius: 20px;
+  background-color: var(--pd-actionbtns-color2);
+  outline: none;
+  border: none;
+  padding: 2px 20px;
+  transition: 0.2s ease;
+}
+.post-2 .post-more .p-actions button:hover {
+  background-color: var(--pd-actionbtns-color-hover2);
+}
+.post-2 .post-more .p-details {
+  display: flex;
+  flex-direction: column;
+}
+.post-2 .post-more .p-details .pd-items {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 6px 8px;
+  padding-bottom: 10px;
+}
+.post-2 .post-more .p-details .pd-items span {
+  background-color: rgb(36, 83, 41);
+  color: #fff;
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  padding: 2px 16px;
+}
+.post-2 .post-more .p-details .pd-series {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 6px 8px;
+  padding-bottom: 12px;
+}
+.post-2 .post-more .p-details .pd-series span {
+  background-color: rgb(106, 38, 55);
+  color: #fff;
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  padding: 2px 16px;
+}
+.post-2 .post-more .p-details .pd-tags {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 6px 8px;
+}
+.post-2 .post-more .p-details .pd-tags span {
+  background-color: rgb(103, 138, 144);
+  color: #fff;
+  outline: none;
+  border: none;
+  border-radius: 20px;
+  padding: 2px 10px;
+  font-size: 0.8rem;
+}
 
 @media (min-width: 768px) {
   .post-2 {
@@ -123,11 +200,23 @@
   }
   .post-2 .post-card {
     align-items: unset;
+    padding: unset;
   }
   .post-2 .p-footer {
     max-width: 500px;
   }
   .post-2 .p-footer .p-user {
     margin-left: 40px !important;
+  }
+}
+@media (min-width: 992px) {
+  .post-2 {
+    flex-direction: row;
+  }
+  .post-2 .post-card {
+    width: 60%;
+  }
+  .post-2 .post-more {
+    width: 40%;
   }
 }/*# sourceMappingURL=post.css.map */
