--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -4,6 +4,7 @@ main{
 
 .post-2{
     width: 100%;
+    padding-top: 16px;
     margin: 0 0 12px;
     display: flex;
     flex-direction: column;
@@ -11,22 +12,22 @@ main{
         display: flex;
         flex-direction: column;
         margin-bottom: 20px;
-        padding: 16px 0;
+        padding: 0 8px;
         .p-body{
-            margin-bottom: 10px;
+            margin-bottom: 20px;
             display: flex;
             flex-direction: row;
             .p-cover{
                 display: flex;
                 align-items: center;
                 flex-shrink: 0;
-                padding-left: 6px;
                 padding-right: 12px;
                 width: 20%;
                 min-width: 90px;
                 img{
                     width: 100%;
                     height: auto;
+                    max-height: 370px;
                     border-radius: 4px;
                 }
             }
@@ -62,7 +63,6 @@ main{
             font-family: 'Itim', cursive;
             display: flex;
             flex-flow: wrap;
-            padding: 0 10px 10px;
             width: 100%;
             .p-evaluation{
                 display: flex;
@@ -120,6 +120,83 @@ main{
             }
         }
     }
+    .post-more{
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        .p-actions{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            gap: 6px 8px;
+            padding-bottom: 16px;
+            .pd-saved{
+                background-color: #4A8D5D !important;
+                color: #fff;
+            }
+            button{
+                color: var(--text-color1);
+                border-radius: 20px;
+                background-color: var(--pd-actionbtns-color2);
+                outline: none;
+                border: none;
+                padding: 2px 20px;
+                transition: 0.2s ease;
+                &:hover{
+                    background-color: var(--pd-actionbtns-color-hover2);
+                }
+            }
+        }
+        .p-details{
+            display: flex;
+            flex-direction: column;
+            .pd-items{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                gap: 6px 8px;
+                padding-bottom: 10px;
+                span{
+                    background-color: rgb(36 83 41);
+                    color: #fff;
+                    outline: none;
+                    border: none;
+                    border-radius: 4px;
+                    padding: 2px 16px;
+                }
+            }
+            .pd-series{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                gap: 6px 8px;
+                padding-bottom: 12px;
+                span{
+                    background-color: rgb(106, 38, 55);
+                    color: #fff;
+                    outline: none;
+                    border: none;
+                    border-radius: 4px;
+                    padding: 2px 16px;
+                }
+            }
+            .pd-tags{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                gap: 6px 8px;
+                span{
+                    background-color: rgb(103 138 144);
+                    color: #fff;
+                    outline: none;
+                    border: none;
+                    border-radius: 20px;
+                    padding: 2px 10px;
+                    font-size: 0.8rem;
+                }
+            }
+        }
+    }
     
 }
 
@@ -145,6 +222,7 @@ main{
         margin: 20px 0 12px;
         .post-card{
             align-items: unset;
+            padding: unset;
         }
         .p-footer{
             max-width: 500px;
@@ -157,6 +235,15 @@ main{
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
+    .post-2{
+        flex-direction: row;
+        .post-card{
+            width: 60%;
+        }
+        .post-more{
+            width: 40%;
+        }
+    }
 }
 
 // Extra large devices (large desktops, 1200px and up)
