--- a/OmneFictio.Web/wwwroot/css/postitem.scss
+++ b/OmneFictio.Web/wwwroot/css/postitem.scss
@@ -27,10 +27,10 @@
             padding: 10px;
             font-family: 'Josefin Sans', sans-serif;
             font-weight: 600;
-            span{
-                vertical-align: middle;
-            }
-            span:hover{
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            a:hover{
                 text-decoration: underline;
             }
             .p-date{
@@ -221,7 +221,7 @@
                 padding: 2px 10px;
                 transition: 0.2s ease;
                 &:hover{
-                    background-color: var(--background-color-hover3);
+                    background-color: var(--pd-actionbtns-color-hover1);
                 }
             }
         }
