--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -14,7 +14,6 @@
   --headericon-color: #ffffff;
   --accountdropdown-icon-hover: #ffffff10;
   --dropdownbg-color: #313131;
-  --pd-actionbtns-color: #444444;
   --shortcuticons-color: #ffffff;
   --navlink-readingtime-color: #415050;
   --navlink-readingtime-color-hover: #607d7d;
@@ -26,6 +25,10 @@
   --register-input-color: #1d1d1d;
   --publish-form-color: #404040;
   --publish-input-color: #1d1d1d;
+  --pd-actionbtns-color: #444444;
+  --pd-actionbtns-color-hover1: #5e5e5e;
+  --pd-actionbtns-color2: #444444;
+  --pd-actionbtns-color-hover2: #5e5e5e;
   --searchplaceholder-color: #939393;
 }
 
@@ -45,7 +48,6 @@
   --headericon-color: #ffffff;
   --accountdropdown-icon-hover:#00000010;
   --dropdownbg-color: #e7e7e7;
-  --pd-actionbtns-color: #c7c7c7;
   --shortcuticons-color: #626262;
   --navlink-readingtime-color: #9298b9;
   --navlink-readingtime-color-hover: #777ea8;
@@ -57,6 +59,10 @@
   --register-input-color: #dcdcdc;
   --publish-form-color: #f0f0f0;
   --publish-input-color: #dcdcdc;
+  --pd-actionbtns-color: #c7c7c7;
+  --pd-actionbtns-color-hover1: #c5c5c5;
+  --pd-actionbtns-color2: #c7c7c7;
+  --pd-actionbtns-color-hover2: #bbbbbb;
 }
 
 /*
